css/components/product-grid.css
.card {
    background-size: cover;
    background-repeat: no-repeat;
    background-position: center;
    position: relative; 
    border-radius: 20px;
;
}


.highlight{
    grid-area: highlight;
    background-image: url(../../images/products/card_imagem.jpg);
}

.sneaker-purple{
    grid-area: sneaker-purple;
    background-image: url(../../images/products/roxo-verde-grid.jpg);
}

.model{
    grid-area: model;
    background-image: url(../../images/products/modelo-feminino.jpg);
}

.sneaker-color{
    grid-area: sneaker-color;
    background-image: url(../../images/products/moderno-grid.jpg);
}

.sneaker-white{
    grid-area: sneaker-white;
    background-image: url(../../images/products/preto-azul-grid.jpg);
}

.sneaker-silver{
    grid-area: sneaker-silver;
    background-image: url(../../images/products/futurista-grid.jpg);
}

.grid-section {
    display: grid;
    grid-template-columns: repeat(4, 1fr);
    grid-template-rows: repeat(3, 300px);
    grid-template-areas:
        "highlight highlight sneaker-purple sneaker-purple"
        "highlight highlight model sneaker-color"
        "sneaker-white sneaker-white model sneaker-silver";
}

.highlight-content {
    position: absolute;
   left: 50%;
    top: 50%;
    transform: translate(-50%, -50%);
    text-align: center;
}

.card-title {
    font-size: 1.25rem;
    font-weight: 400;
    color: #ededed;
    margin-bottom: 10px;
}

.card-subtitle {
    font-size: 1.25rem;
    font-weight: 400;
    color: #ededed;
    margin-bottom: 20px;
}   

.cta-group {
    display: flex;
    gap: 10px;
    justify-content: center;
}

@media (max-width: 768px) {
    .grid-section {
        grid-template-columns: repeat(2, 1fr);
        grid-template-rows: repeat(5, 300px);
        grid-template-areas:
            "highlight highlight"
            "sneaker-white sneaker-white"
            "model sneaker-color"
            "model sneaker-silver"
            "sneaker-purple sneaker-purple";
            max-width: 100%;
            gap: 0.625rem;
               }
}

.highlight, .sneaker-purple, .model, .sneaker-color, .sneaker-white, .sneaker-silver {
    min-height: auto;
    
}

